# mireba

./: Cargo.toml  list_outputs.rb  readme.md
examples/: box_approx.rs  dir_light.json  teapot.json
scenes/: example.json
src/: aabox.rs  bounds.rs  brdf.rs  color.rs  dcel.rs  indexed_triangles.rs  interaction.rs  lgram.rs  lib.rs  light.rs  main.rs  map.rs  mat.rs  material.rs  mtl.rs  noodles.rs  notes.md  object.rs  octree.rs  octree2.rs  out.ppm  out10.ppm  out11.ppm  out12.ppm  out13.ppm  out14.ppm  out15.ppm  out16.ppm  out2.ppm  out3.ppm  out4.ppm  out5.ppm  out6.ppm  out7.ppm  out8.ppm  out9.ppm  plane.rs  polygon.rs  properties.rs  renderable.rs  (+14 more)
src/accelerator/: mod.rs  naive.rs  octree.rs
src/bbin/: .gitignore  builder.rs  custom.json  lgram_render.rs  live_render.rs  render_obj.rs
src/bsdf/: builder.rs  debug.rs  diffuse.rs  mod.rs  mtl.rs  phong.rs
src/camera/: builder.rs  mod.rs  old_camera.rs  orthographic.rs  perspective.rs  projective.rs
src/film/: blocks.rs  builder.rs  draw.rs  mod.rs
src/integrator/: builder.rs  depth.rs  direct.rs  mod.rs  path.rs
src/light/: dir.rs  mod.rs  point.rs
src/medium/: mod.rs
src/old/: dcel.rs  map.rs  material.rs  object.rs  old_scene.rs
src/polarized/: builder.rs  color.rs  mod.rs  stokes.rs  wavelength.rs
src/rfilter/: identity.rs  mod.rs
src/sample_files/: sponza.mtl
src/sampler/: builder.rs  functional.rs  metropolis.rs  mod.rs  uniform.rs
src/shapes/: builder.rs  conic.rs  mod.rs  obj.rs  plane.rs  sphere.rs  triangle.rs  triangle_list.rs
src/texture/: bitmap.rs  constant.rs  mod.rs
(+18 files in other folders)
