[package]
name = "ray_weekend"
version = "0.1.0"
authors = ["julianknodt <julianknodt@gmail.com>"]
edition = "2018"

[dependencies]
num = "0.2.0"
rand = "0.7.0"
rand_distr = "0.2.1"
image = "0.22.3"
ezflags = "0.1.3"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.48"

[dev-dependencies]
quickcheck = "0.9"

[profile.release]
lto = true
