[package]
name = "gfx"
version = "0.1.0"
authors = ["julianknodt <julianknodt@gmail.com>"]
edition = "2018"
default-run = "mireba"

[dependencies]
num = "0.2.0"
rand = { version="0.7.0", features=["small_rng"] }
rand_distr = "0.2.1"
image = "0.23.2"
quick_maths = { version = "=0.1.9", path = "../quick_maths", features = ["serde"] }
cfg-if = "0.1.10"

# Needed for running renderer
clap = "2.33.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
quickcheck = "0.9.2"
quick_maths = { version = "=0.1.9", features=["quickcheck"], path = "../quick_maths" }

[profile.release]
# lto = true
# codegen-units=256

[features]
mono = []
polarized = []
